create resoucres | push resources

--- a/pyBank/py_bank.ipynb
+++ b/pyBank/py_bank.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "file = pd.read_csv('budget_data.csv')\n",
+    "file = pd.read_csv('./Resources/budget_data.csv')\n",
     "\n",
     "\n",
     "#clean the date in dataset\n",
@@ -47,7 +47,7 @@
     "#\n",
     "##\n",
     "###NEW DATASET\n",
-    "dataset = pd.read_csv('new_budget_data.csv')\n",
+    "dataset = pd.read_csv('./Resources/new_budget_data.csv')\n",
     "income_statement_column = dataset[\"income statement\"]\n",
     "month_column = dataset['month']\n",
     "day_column = dataset['day']"
