Update py_bank.ipynb (Added Resources path)

--- a/pyBank/py_bank.ipynb
+++ b/pyBank/py_bank.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "file = pd.read_csv('budget_data.csv')\n",
+    "file = pd.read_csv('Resources/budget_data.csv')\n",
     "\n",
     "\n",
     "#clean the date in dataset\n",
@@ -41,7 +41,7 @@
     "\n",
     "## Saved as a new csv file\n",
     "new_data = pd.DataFrame(data)\n",
-    "new_data.to_csv('new_budget_data.csv', index=False)\n",
+    "new_data.to_csv('Resources/new_budget_data.csv', index=False)\n",
     "\n",
     "\n",
     "#\n",
