--- a/Election/poll_analysis.ipynb
+++ b/Election/poll_analysis.ipynb
@@ -139,7 +139,7 @@
    "id": "dd6c1ad6",
    "metadata": {},
    "source": [
-    "## Total Number of votes cast"
+    "## Total Number of votes casted"
    ]
   },
   {
